TODO
保存历史记录 
自定义保存格式（始终pdf/webp/zip或每次询问）
下载前显示漫画信息（标题、作者、页数等）、保存格式、保存路径，需要确认下载

v1.0.0 [2025.12.20]
新增 主题颜色：粉红樱花、绿色森林、碧蓝海色、薰衣草紫
新增 测试链接功能，检测当前IP可访问的Jmcomic域名（测试功能，暂不准确）
新增 大量注释！
新增 配置文件支持，保存主题、日志等状态
新增 恢复默认设置功能，重置所有设置为初始状态
新增 simpsave模块，实现配置文件的读写
优化 设置、菜单功能列表的获取方式
修复 每次运行创建jmcli的潜在网络问题
修复 设置、菜单默认选项不为上次选择选项的问题
修复 下载日志开关状态未同步更新的问题
修改 Text、Link、InterfaceStyles 数据类为字典常量
移除 get_command 类，改用函数式逻辑
移除 select_command()，改用ui.select()
删除 主题颜色：极简黑白

pre-0.3.3[2025.12.13] 
删除 仓库中的yaml,InquirerPy,jmcomic模块
删除 冗余模块的导入
修改 模块导入方式，不再采用从src\libs的导入方式
修改 类名为大驼峰命名法
修改 requirements.txt
修复 主题调整失效的问题
新增 日志显示可在应用内关闭
新增 设置页面添加设置选项


pre-0.3.2[2025.11.12]
删除 设置、菜单选项前的序号
新增 退出设置的设置选项
新增 设置不自动退出
新增 下载漫画时提示日志已关闭
新增 交互式命令行界面的主题选择功能
修复 部分终端中，选项指针显示异常的问题
修改 关于、设置、菜单部分文本
封装 InquirerPy 部分函数至 ui.py，简化调用
修复 错误传参导致的下载漫画功能无法使用



pre-0.3.1[2025.11.12]
移动 res.py内的函数至core.py
删除 res.py
删除 动态导入有关代码
优化 相对导入方式
修改 README.md
新增 菜单、设置页面的交互式命令行界面（使用InquirerPY模块实现）
新增 下载前确认提示
新增 关于文本中的InquirerPy模块信息及链接
新增 src\libs下的__init__.py
修复 因core.py中line 31多余global引起打包失败的问题 
修复 InquirerPy模块导入方式导致无法运行的问题


pre-0.2.2[2025.11.08]
·修复 jm 模块动态导入失败的问题（jm is not defined）
优化 使用类整理link和text
新增 jmcomic和pyyaml模块至.scr\module目录
新增Changelog文件，记录更新日志
删除 build_exe.py，jmcomic_downloader.py可兼顾运行和编译
删除 exe/py版本标识
·Update README.md
·将.scr文件夹正确重命名为.scr
将module文件夹重命名为libs
新增 正则表达式检测禁漫车是否仅为数字和空格，减少输入错误时的等待时间
移动 res.py中的文本至text.py，
移动 主程序的main函数至core.py

【以下为添加Changelog前的更新，整理自Commits】

Commit a981756 [2025.11.01]
Style changed
1.代码结构调整,将主要功能模块移至scr/module目录，简化主脚本
2.风格调整：将小驼峰全部更改为snake_case，规范入口函数，规范模块导入，规范长字符串拼接
3.添加requirements.txt
4.jmcomic_downloaderToEXEver.py更名为build_exe.py
5.scr/icon.ico迁移至assets目录
6.修改命令无效的提示
7.修改部分注释
8.优化异常提示
9.动态导入模块时，回车可直接进入默认项（Y-同意）

Commit 132c564 [2025.10.30]
Update README.md

Commit 91edbfb [2025.10.26]
Fix&Docs
修改 README.md
修改 主程序文件名为jmcomic_downloader.py
修改文件夹名称及文件结构
新增 jmcomic_downloaderToEXEver.py 文件，去除动态导入功能以用于编译为.exe文件
新增 res.py 文件，将模块检查、动态导入、固定文本等与主程序分离
新增 图标文件（临时使用）
新增 程序运行时的报错提示，包括异常类型及异常信息