@@ -8,8 +8,8 @@ https://jmcomic.readthedocs.io/zh-cn/latest/tutorial/8_pick_domain/
 import traceback
 import sys
 import os
-from jmcomic import * 
 
+from jmcomic import JmOption, JmcomicText, JmModuleConfig, disable_jm_log, multi_thread_launcher, Set
 sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__)))))
 import libs.self.core as core
 
@@ -54,7 +54,7 @@ def test_domain(domain: str):
         status = str(e.args)
 
     domain_status_dict[domain] = status
-    time.sleep(1)
+    input ("回车以测试下一个域名...")
 
 def test_all_domains():
     try:
@@ -77,5 +77,5 @@ def test_all_domains():
         traceback.print_exc()
     finally:
         # ✔ 恢复日志开关
-        JmModuleConfig.FLAG_ENABLE_JM_LOG = core.show_download_log
+        JmModuleConfig.FLAG_ENABLE_JM_LOG = core.SHOW_JM_LOG
 
