@@ -2,6 +2,8 @@ TODO
 保存历史记录 
 自定义保存格式（始终pdf/webp/zip或每次询问）
 下载前显示漫画信息（标题、作者、页数等）、保存格式、保存路径，需要确认下载
+README、关于的simpsave模块说明
+主题不存在时，自动选用默认风格
 
 v1.0.0 [2025.12.20]
 新增 主题颜色：粉红樱花、绿色森林、碧蓝海色、薰衣草紫
